<resources>
    <string name="app_name">TallerListView</string>
    <string name="opciones">Opciones</string>
    <string name="areas">Areas</string>
    <string name="cuadrado">Cuadrado</string>
    <string name="valordellado">Valor del lado:</string>
    <string name="calcular">Calcular</string>
    <string name="borrar">Borrar</string>
    <string name="rectangulo">Rectangulo</string>
    <string name="base">Base:</string>
    <string name="altura">Altura:</string>
    <string name="triangulo">Triangulo</string>
    <string name="circulo">Circulo</string>
    <string name="radio">Radio:</string>
    <string name="volumenes">Volúmenes</string>
    <string name="esfera">Esfera</string>
    <string name="cilindro">Cilindro</string>
    <string name="cono">Cono</string>
    <string name="cubo">Cubo</string>
    <string name="realizadas">Realizadas</string>
    <string name="no">No.</string>
    <string name="operacion">Operación</string>
    <string name="datos">Datos</string>
    <string name="resultados">Resultados</string>
    <array name="OpcionesPrincipal">
        <item>@string/areas</item>
        <item>@string/volumenes</item>
        <item>@string/realizadasOP</item>
    </array>
    <array name="OpcionesAreas">
        <item>@string/cuadrado</item>
        <item>@string/rectangulo</item>
        <item>@string/triangulo</item>
        <item>@string/circulo</item>
    </array>
    <array name="OpcionesVolumenes">
        <item>@string/esfera</item>
        <item>@string/cilindro</item>
        <item>@string/cono</item>
        <item>@string/cubo</item>
    </array>
    <string name="realizadasOP">Operaciones Realizadas</string>
    <string name="resultado">Resultado</string>
    <string name="area">Area:</string>
    <string name="ok">Ok</string>
    <string name="volumen">Volumen:</string>
    <string name="error1">Ingrese un valor</string>
</resources>
